Exchange error handling may deliver incorrect error code

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.6
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Query 2018-11-19
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      During the exchange error handling there may be a situation when the ARM picks up the internal "cursor killed" error message instead of the real error that cause the kill to be issued.

            Assignee:
            Martin Neupauer (Inactive)
            Reporter:
            Martin Neupauer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: