SERVER-37613 Exchange error handling may deliver incorrect error code.